--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-<title> main </title>
+<title> inwentaryzacjaBytomBobrek </title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="inwe.css">
 </head>
@@ -15,12 +15,12 @@
 <div class="menu"> 
     <br>
     <button class="button" onclick="window.location.href='index.html';" >Główna</button>
-    <button class="button2" onclick="window.location.href='ofer.html';" >Portfolio</button>
+    <button class="button2" onclick="window.location.href='por.html';" >Portfolio</button>
     <button class="button3" onclick="window.location.href='zes.html';" >Zespół</button>
     <button class="button4" onclick="window.location.href='kon.html';" >Kontakt</button>
     </div>
-<h2 class="main7" > O firmie RATBUD
-<div>
+<h2 class="main7"  > O firmie RATBUD
+<div class="p">
 <br>Jesteśmy małą firmą inwentaryzacyjną prowadzącą inwentaryzacje głównie obiektów kościelnych od 5 lat. <br>Wszyscy nasi klienci 
 byli zadowolonie z naszych usług i dążymy do tego, aby to się nigdy nie zmieniło.
 <br> Naszą ostatnią pracą było przygotowanie szczegółowej dokumentacji o kościele przeniesionym
