--- a/zes.html
+++ b/zes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-<title>gal</title>
+<title>Zespół</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="inwe.css">
 </head>
@@ -12,7 +12,7 @@
 <div class="menu"> 
     <br>
     <button class="button" onclick="window.location.href='index.html';" >Główna</button>
-    <button class="button2" onclick="window.location.href='ofer.html';" >Portfolio</button>
+    <button class="button2" onclick="window.location.href='por.html';" >Portfolio</button>
     <button class="button3" onclick="window.location.href='zes.html';" >Zespół</button>
     <button class="button4" onclick="window.location.href='kon.html';" >Kontakt</button>
   </div>
@@ -49,8 +49,6 @@
 </ul></h3>
 </div>
 </div>
-  
-
 </div>
 
 </body>
