--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button class="button3" onclick="window.location.href='zes.html';" >Zespół</button>
     <button class="button4" onclick="window.location.href='kon.html';" >Kontakt</button>
     </div>
-<h2 class="main7"  > O firmie RATBUD
+<div class="main7"  ><h2><br> O firmie RATBUD
 <div class="p">
 <br>Jesteśmy małą firmą inwentaryzacyjną prowadzącą inwentaryzacje głównie obiektów kościelnych od 5 lat. <br>Wszyscy nasi klienci 
 byli zadowolonie z naszych usług i dążymy do tego, aby to się nigdy nie zmieniło.
@@ -27,6 +27,7 @@ byli zadowolonie z naszych usług i dążymy do tego, aby to się nigdy nie zmie
  z Bytomia Bobrka do Muzeum <br>"Górnośląskiego Parku Etnograficznego w Chorzowie". Była to najtrudniejsza z prac z jaką mierzył się zespół naszych specjalistów.</div>
 <div class="zdj"><br><img src="kościół przód.JPG" alt=""></div>
 </h2>
+</div>
 
 </div>
 
