--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <button class="button3" onclick="window.location.href='zes.html';" >Zespół</button>
     <button class="button4" onclick="window.location.href='kon.html';" >Kontakt</button>
     </div>
-<div class="main7"  ><h2><br> O firmie RATBUD
+<div class="main7"  >
 <div class="p">
+<h2><br> O firmie RATBUD
 <br>Jesteśmy małą firmą inwentaryzacyjną prowadzącą inwentaryzacje głównie obiektów kościelnych od 5 lat. <br>Wszyscy nasi klienci 
 byli zadowolonie z naszych usług i dążymy do tego, aby to się nigdy nie zmieniło.
 <br> Naszą ostatnią pracą było przygotowanie szczegółowej dokumentacji o kościele przeniesionym
