--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
 <div class="main7"  >
 <div class="p">
-<h2><br> O firmie RATBUD
-<br>Jesteśmy małą firmą inwentaryzacyjną prowadzącą inwentaryzacje głównie obiektów kościelnych od 5 lat. <br>Wszyscy nasi klienci 
+<h1><br> O firmie RATBUD</h1><h2>
+<br>Jesteśmy małą firmą inwentaryzacyjną prowadzącą inwentaryzacje głównie obiektów kościelnych od 3 lat. <br>Wszyscy nasi klienci 
 byli zadowolonie z naszych usług i dążymy do tego, aby to się nigdy nie zmieniło.
 <br> Naszą ostatnią pracą było przygotowanie szczegółowej dokumentacji o kościele przeniesionym
  z Bytomia Bobrka do Muzeum <br>"Górnośląskiego Parku Etnograficznego w Chorzowie". Była to najtrudniejsza z prac z jaką mierzył się zespół naszych specjalistów.</div>
