--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 byli zadowolonie z naszych usług i dążymy do tego, aby to się nigdy nie zmieniło.
 <br> Naszą ostatnią pracą było przygotowanie szczegółowej dokumentacji o kościele przeniesionym
  z Bytomia Bobrka do Muzeum <br>"Górnośląskiego Parku Etnograficznego w Chorzowie". Była to najtrudniejsza z prac z jaką mierzył się zespół naszych specjalistów.</div>
-<div class="zdj"><br><img src="kościół przód.JPG" alt=""></div>
+<div class="zdj"><br><img src="rbstr.png" alt=""></div>
 </h2>
 </div>
 
